--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<h1>CyRep0</h1>
-<h3>Cydia Repo Manager in Python</h3>
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+  <title>Reposi3</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+  document.getElementById('cydialink').href = 'cydia://url/https://cydia.saurik.com/api/share#?source=' + location.href.replace(/[^/]*$/, '');
+  </script>
+</html>
+
+<body>
+  <h1><br>My Cydia Repo</h1>
+  <p>This URL points to a Cydia Repo, please add this URL to Cydia!<br><a id='cydialink' href="#">Add to Cydia</a><br><br><i><a href='https://github.com/J0113/CyRep0'>Powerd by CyRep0 Repo Manger by J0113</i></a></p>
+</body>
+</html>
