--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 
 </head>
-  <title>Reposi3</title>
+  <title>Cydia Repo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
-  document.getElementById('cydialink').href = 'cydia://url/https://cydia.saurik.com/api/share#?source=' + location.href.replace(/[^/]*$/, '');
+  document.getElementById('cydialink').href = "cydia://url/https://cydia.saurik.com/api/share#?source=" + location.href.replace(/[^/]*$/, '');
   </script>
 </html>
 
 <body>
   <h1><br>My Cydia Repo</h1>
-  <p>This URL points to a Cydia Repo, please add this URL to Cydia!<br><a id='cydialink' href="#">Add to Cydia</a><br><br><i><a href='https://github.com/J0113/CyRep0'>Powerd by CyRep0 Repo Manger by J0113</i></a></p>
+  <p>This URL points to a Cydia Repo, please add this URL to Cydia!<br><a id='cydialink' href="">Add to Cydia</a><br><br><i><a href='https://github.com/J0113/CyRep0'>Powerd by CyRep0 Repo Manger by J0113</i></a></p>
 </body>
 </html>
