--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 
 </head>
-  <title>Cydia Repo</title>
+  <title>My Cydia Repo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
-  document.getElementById('cydialink').href = "cydia://url/https://cydia.saurik.com/api/share#?source=" + location.href.replace(/[^/]*$/, '');
+  var link = location.href.replace(/[^/]*$/, '')
+  document.getElementById('cydialink').href = "cydia://url/https://cydia.saurik.com/api/share#?source=" + link;
   </script>
 </html>
 
