--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
   var link = location.href.replace(/[^/]*$/, '')
-  document.getElementById('cydialink').href = "cydia://url/https://cydia.saurik.com/api/share#?source=" + link;
+  document.getElementById('cydialink').href = 'cydia://url/https://cydia.saurik.com/api/share#?source=' + link;
   </script>
 </html>
 
